[+] Added Products and shiiiieeeeet

--- a/.gitignore
+++ b/.gitignore
@@ -283,3 +283,4 @@ package-lock.json
 /Stolit.MVC/Uploaded/Category/Images
 /Stolit.MVC/Uploaded/
 /SecretProjectBack/appsettings.json
+/SecretProjectBack/Images
